# polynomiograpy

./: .gitignore  LICENSE  README.md  example.py  gui.py  main.py  pyproject.toml
documentation-html/: .buildinfo  genindex.html  index.html  objects.inv  polyboniograpy.roots.helpers.html  polynomiograpy.cli.html  polynomiograpy.common.html  polynomiograpy.html  polynomiograpy.iterations.helpers.html  polynomiograpy.iterations.html  polynomiograpy.roots.helpers.html  polynomiograpy.roots.html  py-modindex.html  roots.html  search.html  searchindex.js
documentation-html/_sources/: index.rst.txt  polyboniograpy.roots.helpers.rst.txt  polynomiograpy.cli.rst.txt  polynomiograpy.common.rst.txt  polynomiograpy.iterations.helpers.rst.txt  polynomiograpy.iterations.rst.txt  polynomiograpy.roots.helpers.rst.txt  polynomiograpy.roots.rst.txt  polynomiograpy.rst.txt  roots.rst.txt
documentation-html/_sources/polynomiograpy.common/: polynomiograpy.FiniteField.rst.txt  polynomiograpy.Polynomial.rst.txt  polynomiograpy.compute_screen_for_finite_field_poly.rst.txt  polynomiograpy.compute_screen_for_finite_field_poly_multi_color.rst.txt  polynomiograpy.compute_screen_for_single_poly.rst.txt
documentation-html/_sources/stubs/: polynomiograpy.rst.txt
documentation-html/_static/: alabaster.css
documentation-html/polynomiograpy.common/: polynomiograpy.FiniteField.html  polynomiograpy.Polynomial.html  polynomiograpy.compute_screen_for_finite_field_poly.html  polynomiograpy.compute_screen_for_finite_field_poly_multi_color.html  polynomiograpy.compute_screen_for_single_poly.html
documentation-html/stubs/: polynomiograpy.html  roots.html
polynomiograpy/: __init__.py  compute_screen.py
polynomiograpy/cli/: __init__.py
polynomiograpy/common/: __init__.py  finite_field.py  polynomial.py
polynomiograpy/iterations/: __init__.py  helpers.py  methods.py
polynomiograpy/methods/: iter.py
polynomiograpy/roots/: __init__.py  helpers.py
project-assets/presentations/preliminary/src/: README.md  bitirme.bib  gtu-presentation.sty  gtu_presentation_example.tex
project-assets/report/src/: GTUThesis.sty  LICENSE  README.md  main.tex  refs.bib
project-assets/report/src/Body/Backmatter/: Appendices.tex  CV.tex
project-assets/report/src/Body/Frontmatter/: Abstract.tex  ListOfAcro.tex
project-assets/report/src/Body/Mainmatter/: Conclusions.tex  Implementation.tex  Introduction.tex
