[tool.poetry]
name = "polynomiograpy"
version = "0.5.0"
description = ""
authors = ["İsmail Tapan <ismltpn@gmail.com>"]
maintainers = ["İsmail Tapan <ismltpn@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/ismltpn/polynomiograpy/"
documentation = ""
keywords = [
    "Polynomiography",
    "Polynomials",
    "Visual Art"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pillow = "^9.4.0"
dearpygui = {version = "^1.9.1", extras = ["gui"]}

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
polynomiograpy_cli = 'polynomiograpy.cli:run'
polynomiograpy_gui = 'gui:run'

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
rst2pdf = "^0.100"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
